# RedmineMCP

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE  MARKETPLACE.md  README.md  docker-compose.test.yml  install.sh  llms-install.md  package.json  smithery.yaml  tsconfig.json
.claude-plugin/: plugin.json
.claude/skills/redmine/: SKILL.md
.claude/skills/redmine/references/: advanced-api.md  api-reference.md  examples.md  file-operations.md  textile-syntax.md
docs/: 如何使用.md
examples/: mcp-binary.json  mcp-source.json  opencode-binary.json  opencode-source.json
rust/: Cargo.toml  Cross.toml  build-release.sh
rust/src/: config.rs  credential.rs  error.rs  lib.rs  main.rs
rust/src/cli/: app.rs  files.rs  issues.rs  metadata.rs  mod.rs  output.rs  projects.rs  time.rs  users.rs  versions.rs  wiki.rs
rust/src/client/: mod.rs  types.rs
rust/src/log_viewer/: mod.rs  ui.rs
rust/src/tools/: mod.rs  params.rs
rust/test/: docker-compose.yml  setup_test_env.sh  test_mcp.sh
scripts/: build.sh  download-binary.sh  run-mcp.sh
skills/redmine/: SKILL.md
skills/redmine/references/: advanced-api.md  api-reference.md  operators.md
skills/redmine/scripts/: parse-url.ts
src/: index.ts  logger.ts  redmine-client.ts
src/log-viewer/: server.ts  ui.ts
src/tools/: definitions.ts  handlers.ts
