[package]
name = "redmine-mcp"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "MCP Server for Redmine integration"
authors = ["Soane"]

[dependencies]
# MCP Protocol (Official Rust SDK)
rmcp = { version = "0.9", features = ["server", "transport-io"] }

# Async Runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP Client (using native-tls-vendored for cross-compilation compatibility)
# Note: reqwest 0.13.x removed rustls-tls-ring, default rustls uses aws-lc-rs which is hard to cross-compile
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "native-tls-vendored"  # Vendored OpenSSL - better cross-compile support
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Utilities
url = "2.5.7"
urlencoding = "2.1.3"
bytes = "1.11"

# Log Viewer (HTTP Server + WebSocket)
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"
open = "5"
chrono = "0.4"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
